--- a/wrangler.toml
+++ b/wrangler.toml
@@ -16,13 +16,13 @@ TARGET_UPSTREAM = "https://registry-1.docker.io"
 [env.production]
 name = "cloudflare-docker-proxy"
 # routes = [
-#   { pattern = "docker.libcuda.so", custom_domain = true },
-#   { pattern = "quay.libcuda.so", custom_domain = true },
-#   { pattern = "gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s-gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s.libcuda.so", custom_domain = true },
-#   { pattern = "ghcr.libcuda.so", custom_domain = true },
-#   { pattern = "cloudsmith.libcuda.so", custom_domain = true },
+#   { pattern = "docker.cjkcg.us.kg", custom_domain = true },
+#   { pattern = "quay.cjkcg.us.kg", custom_domain = true },
+#   { pattern = "gcr.cjkcg.us.kg", custom_domain = true },
+#   { pattern = "k8s-gcr.cjkcg.us.kg", custom_domain = true },
+#   { pattern = "k8s.cjkcg.us.kg", custom_domain = true },
+#   { pattern = "ghcr.cjkcg.us.kg", custom_domain = true },
+#   { pattern = "cloudsmith.cjkcg.us.kg", custom_domain = true },
 # ]
 
 [env.production.vars]
@@ -31,7 +31,7 @@ TARGET_UPSTREAM = ""
 
 [env.staging]
 name = "cloudflare-docker-proxy-staging"
-# route = { pattern = "docker-staging.libcuda.so", custom_domain = true }
+# route = { pattern = "docker-staging.cjkcg.us.kg", custom_domain = true }
 
 [env.staging.vars]
 MODE = "staging"
